@@ -7,6 +7,7 @@ Import-Template:
  org.osgi.framework;version=1.3,
  org.aopalliance.*;version="0.0.0",
  org.osgi.service.cm;version=1.2;resolution:=optional,
+ org.osgi.service.packageadmin;version=1.2,
  org.osgi.service.startlevel;version=1.0;resolution:=optional,
  org.apache.commons.logging.*;version=${logging.version.range},
  org.springframework.osgi.*;version=${spring.osgi.version.range},
