@@ -15,6 +15,10 @@ Package org.springframework.osgi.config
 
 Package org.springframework.osgi.context
 * fixed incorrect logging message regarding context service during shutdown
+* added support for schema handler filtering
+
+Package org.springframework.osgi.extender
+* added support for schema handler filtering
 
 
 Changes in version 1.2.0 final (2009-04-09)
